--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -230,17 +230,19 @@ img {
 }
 
 .navbar-nav>li>.dropdown-menu li a {
-    font-size: 12px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 14px;
     background: #fff;
     color: #3a4651;
     line-height: initial;
-    padding: 15px;
-    text-align: center;
+    padding: 10px;
+    text-align: left;
     margin: initial;
     height: initial;
+    text-transform: none !important;
 }
 .navbar-nav>li>.dropdown-menu li a:hover {
-    background: #007FBC;
+    background: #efefef;
 }
 
 @media (min-width: 768px) {
@@ -249,7 +251,7 @@ img {
         font-size: 13px;
         height: 70px;
         line-height: 40px;
-        transition: all 0.2s ease-out;
+        transition: all 0.1s ease-out;
     }
 }
 
@@ -526,30 +528,359 @@ form .btn {
     font-weight: 700;
 }*/
 
+#msform {
+    min-height: 650px;
+    z-index: 99;
+    text-align: center;
+    position: relative;
+    margin-top: 50px;
+}
 
-/* end contact */
+#msform fieldset {
+    background: white;
+    border: 0 none;
+    border-radius: 0px;
+    box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
+    padding: 20px 30px;
+    box-sizing: border-box;
+    width: 100%;
 
+    /*stacking fieldsets above each other*/
+    position: relative;
+}
 
-/* start footer */
+/*Hide all except first fieldset*/
+#msform fieldset:not(:first-of-type) {
+    display: none;
+}
+
+/*inputs*/
+#msform input, #msform textarea, #msform select {
+    padding: 15px;
+    border: 1px solid #ccc;
+    border-radius: 0px;
+    margin-bottom: 10px;
+    width: 100%;
+    box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #2C3E50;
+    font-size: 13px;
+}
+
+#msform textarea, #msform select {
+    padding: 5px;
+}
+
+#msform input:focus, #msform textarea:focus, #msform select:focus {
+    -moz-box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+    border: 1px solid #13bde7;
+    outline-width: 0;
+    transition: All 0.5s ease-in;
+    -webkit-transition: All 0.5s ease-in;
+    -moz-transition: All 0.5s ease-in;
+    -o-transition: All 0.5s ease-in;
+}
+
+/*buttons*/
+#msform .action-button {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    width: 100px;
+    background: #13bde7;
+    font-weight: bold;
+    color: white;
+    border: 0 none;
+    border-radius: 25px;
+    cursor: pointer;
+    padding: 10px 5px;
+    margin: 10px 5px;
+}
+
+#msform .action-button:hover, #msform .action-button:focus {
+    background: #007FBC;
+}
+
+#msform .action-button-previous {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+    width: 100px;
+    background: #d3d3d3;
+    font-weight: bold;
+    color: white;
+    border: 0 none;
+    border-radius: 25px;
+    cursor: pointer;
+    padding: 10px 5px;
+    margin: 10px 5px;
+}
+
+#msform .action-button-previous:hover, #msform .action-button-previous:focus {
+    background: #b3b3b3;
+}
+
+/*headings*/
+.fs-title {
+    font-size: 18px;
+    text-transform: uppercase;
+    color: #2C3E50;
+    margin-bottom: 10px;
+    letter-spacing: 2px;
+    font-weight: bold;
+}
+
+.fs-subtitle {
+    font-weight: normal;
+    font-size: 13px;
+    color: #666;
+    margin-bottom: 20px;
+}
+
+/*progressbar*/
+#progressbar {
+    padding-left: 0;
+    margin-bottom: 30px;
+    overflow: hidden;
+    /*CSS counters to number the steps*/
+    counter-reset: step;
+}
+
+#progressbar li {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    list-style-type: none;
+    color: #000;
+    text-transform: uppercase;
+    font-size: 12px;
+    width: 33.33%;
+    font-weight: 400;
+    float: left;
+    position: relative;
+    letter-spacing: 1px;
+}
+
+#progressbar li:before {
+    content: counter(step);
+    counter-increment: step;
+    width: 32px;
+    height: 32px;
+    line-height: 32px;
+    display: block;
+    font-size: 14px;
+    font-weight: 700;
+    color: #333;
+    background: #e7e7e7;
+    border-radius: 50%;
+    margin: 0 auto 10px auto;
+}
+
+/*progressbar connectors*/
+#progressbar li:after {
+    content: '';
+    width: 100%;
+    height: 2px;
+    background: #e7e7e7;
+    position: absolute;
+    left: -50%;
+    top: 16px;
+    z-index: -1; /*put it behind the numbers*/
+}
+
+#progressbar li:first-child:after {
+    /*connector not needed before the first step*/
+    content: none;
+}
+
+/*marking active/completed steps green*/
+/*The number of the step and the connector before it = green*/
+#progressbar li.active:before, #progressbar li.active:after {
+    background: #13bde7;
+    color: white;
+}
+
+/* Noga */
+.footer-container {
+    margin-top: 70px;
+    padding-bottom: 20px;
+}
 
 footer {
-    background: #3a4651;
-    color: #fff;
-    font-weight: 400;
-    text-align: center;
-    padding: 5px;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
+    background-color: #3a4651;
+    min-height: 300px;
+}
+    .footer-col {
+        margin-top: 30px;
+    }
+    .logofooter {
+        margin-bottom: 10px;
+        font-size: 25px;
+        color: #fff;
+        font-weight: 700;
+    }
+    .footer-col p {
+        color: #fff;
+        font-size: 12px;
+        margin-bottom: 15px;
+    }
+    .footer-col p i {
+        width: 20px;
+        color: #fff;
+    }
+    .footer-ul {
+        list-style-type: none;
+        padding-left: 0;
+        margin-left: 2px;
+    }
+    .footer-ul li {
+        line-height: 29px;
+        font-size: 12px;
+    }
+    .footer-ul li a {
+        color: #fff;
+        transition: color 0.1s linear 0s, background 0.1s linear 0s;
+    }
+    .footer-ul i {
+        margin-right: 10px;
+    }
+    .footer-ul li a:hover {
+        transition: color 0.1s linear 0s, background 0.1s linear 0s;
+        color: #13bde7;
+    }
+    .copyright {
+        width: 100% !important;
+        min-height: 40px;
+        background-color: #3a4651;
+    }
+    .copyright p {
+        font-size: 12px;
+        text-align: left;
+        color: #FFF;
+        padding: 10px 0;
+        margin-bottom: 0;
+    }
+        .copyright p a {
+            font-size: 12px;
+            text-align: left;
+            color: #FFF;
+            padding: 10px 0;
+            margin-bottom: 0;
+        }
+    .heading7 {
+        font-size: 21px;
+        font-weight: 700;
+        color: #fff;
+        padding-bottom: 15px;
+        border-bottom: 1px dotted #13bde7;
+        margin-bottom: 15px;
+    }
+    .post p a {
+        font-size: 12px;
+        color: #FFF;
+        line-height: 20px;
+    }
+    .post p span {
+        display: block;
+        color: #8f8f8f;
+    }
+    .bottom_ul {
+        list-style-type: none;
+        margin-bottom: 0;
+    }
+    .bottom_ul li {
+        float: left;
+        line-height: 40px;
+    }
+    .bottom_ul li a {
+        color: #FFF;
+        font-size: 12px;
+    }
+    .social-icon {
+        width: 30px;
+        height: 30px;
+        font-size: 15px;
+        background-color: blue;
+        color: #fff;
+        text-align: center;
+        margin-right: 10px;
+        padding-top: 7px;
+        border-radius: 50%;
+    }
+        .social-icon:hover {
+            animation: around 0.2s linear;
+        }
+
+    @-moz-keyframes around {
+        100% {
+            -moz-transform: rotate(360deg);
+        }
+    }
+
+@-webkit-keyframes around {
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
 }
 
-footer ul a {
-    color: white;
-    text-decoration: none;
+@keyframes around {
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
 }
 
-footer ul a:hover {
-    color: #13bde7;
-    background: #3a4651 !important;
-}
+    .footer-social {
+        padding: 0 !important;
+        list-style-type: none;
+    }
+    .footer-social li {
+        float: left;
+        margin: 5px;
+    }
+    .linked-in {
+        background-color: #007bb6;
+    }
+    .facebook {
+        background-color: #3b5998;
+    }
+    .twitter {
+        background-color: #1da1f2;
+    }
+    .youtube {
+        background-color: #f63e28;
+    }
+    .instagram {
+        font-weight: bold !important;
+        background: #f09433;
+        background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+        background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
+        background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%);
+        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+    }
 
+    footer input {
+        height: 34px !important;
+    }
+
+    .user-left, 
+    .company-right {
+        padding-top: 50px;
+        text-align: center;
+        min-height: 500px;
+    }
+
+    .user-left button {
+        background: #13bde7;
+        color: #fff;
+        padding: 50px;
+        font-size: 24px;
+        text-transform: uppercase;
+        font-weight: bold;
+        border: none;
+    }
+    .company-right button {
+        background: #f57454;
+        color: #fff;
+        padding: 50px;
+        font-size: 24px;
+        text-transform: uppercase;
+        font-weight: bold;
+        border: none;
+    }
