--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -328,7 +328,7 @@ hr {
 }
 
 .under-nav .container {
-    padding-right: 0; 
+    padding-right: 0;
 }
 
 .free {
@@ -374,17 +374,17 @@ hr {
 }
 
 .jobs-row .col-md-4 {
-    padding-left: 0; 
+    padding-left: 0;
 }
 
 .jobs-row .col-md-8 {
-    padding-left: 50px; 
+    padding-left: 50px;
     padding-right: 0;
 }
 
 .jobs-panel {
     padding: 0;
-    border: none; 
+    border: none;
     box-shadow: none;
 }
 
@@ -571,6 +571,21 @@ form .btn {
     font-size: 13px;
 }
 
+.input-70{
+  width: 68% !important;
+  margin-right: 1%;
+
+}
+
+.input-30{
+  width: 30% !important;
+  margin-left: 2px;
+}
+
+#msform input[type=radio]{
+  width: 20px;
+}
+
 #msform textarea, #msform select {
     padding: 5px;
 }
@@ -606,7 +621,7 @@ form .btn {
 }
 
 #msform .action-button-previous {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     width: 100px;
     background: #d3d3d3;
     font-weight: bold;
@@ -863,7 +878,7 @@ footer {
         height: 34px !important;
     }
 
-    .user-left, 
+    .user-left,
     .company-right {
         text-align: center;
         min-height: 445px;
@@ -934,7 +949,7 @@ footer {
         width: 70%;
     }
 
-    
+
     .company-right::after {
         border-top-right-radius: 10px !important;
         border-bottom-right-radius: 10px !important;
