--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -212,8 +212,9 @@ background: transparent;
 }
 
 .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover {
-
-    color: #007FBC;    background: #007FBC;
+    border-radius: 5px;
+    line-height: 32px;
+    color: #007FBC;    background: #fff;
 }
 
 .navbar-nav>li>.dropdown-menu {
