--- a/public/css/jobr.css
+++ b/public/css/jobr.css
@@ -37,3 +37,38 @@
   color:inherit;
   text-decoration: none;
 }
+
+input[type="radio"] {
+  width: auto !important;
+}
+
+.apply-panel{
+  margin: 0 20px;
+}
+
+.apply-success{
+  color: #34bf49;
+}
+
+.apply-danger{
+  color:#ff4c4c;
+}
+
+.panel-header{
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.disabled{
+  cursor: not-allowed !important;
+}
+
+.block-link{
+  text-decoration: none !important;
+}
+
+@media screen and (max-width: 480px) {
+    .apply-name {
+        font-size: 16px !important;
+    }
+}
