--- a/public/css/jobr.css
+++ b/public/css/jobr.css
@@ -68,4 +68,44 @@ input[type="radio"] {
     .apply-name {
         font-size: 16px !important;
     }
+
+    .greeting{
+      font-size: 20px;
+    }
+
+    .region{
+      font-size: 18px;
+    }
+
+    .pt-30{
+      padding-top: 15px;
+    }
+
+    form .col-md-10{
+        padding-right: 0;
+    }
+
+    form .col-md-2{
+        margin-top: 10px;
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .video-header{
+      margin-bottom: 0
+    }
+
+    .jobs-row{
+      margin-top:0
+      padding-top:20px;
+    }
+
+    .jobs-row .col-md-4{
+      padding-left: 15px;
+    }
+
+    .jobs-row .col-md-8 {
+      padding: 0 15px;
+    }
+
 }
