--- a/public/css/jobr.css
+++ b/public/css/jobr.css
@@ -42,6 +42,14 @@ input[type="radio"] {
   width: auto !important;
 }
 
+.desc{
+    font-size: 16px;
+    padding: 15px 0;
+}
+
+.terms{
+  color:#ff4c4c;
+}
 
 .apply-success{
   color: #34bf49;
