--- a/public/css/jobr.css
+++ b/public/css/jobr.css
@@ -1,3 +1,24 @@
+body{
+  position: relative;
+  min-height: 100vh;
+}
+
+a:focus{
+  outline: none;
+}
+
+fieldset{
+  margin-bottom: 30px;
+}
+
+footer{
+  position: absolute;
+  bottom:0;
+  width: 100%;
+  min-height: auto;
+}
+
+
 .apply-name{
   line-height: 35px;
   font-size: 20px;
